# ksenyaChatBot

./: .db.env  .dockerignore  .env.distr  .env.save  .flake8  .gitignore  .pydeps  Dockerfile  README.md  bot.py  db.env.distr  docker-compose.yml  migrations.json  migrations.py  pyproject.toml
.nginx/: http.conf  https.conf
apps/: routers.py
apps/chains/: main.py  models.py
apps/channels/: callbacks.py  models.py  states.py
apps/handlers/: admins.py  channels.py  payments.py  policy.py  start.py
apps/notifications/: models.py  schemas.py  tasks.py  utils.py
apps/payments/: callbacks.py  filters.py  models.py  states.py  tasks.py  text_templates.py  utils.py
apps/users/: callbacks.py  filters.py  middlewares.py  models.py  utils.py
apps/utils/: fields.py  (+6 more)
db/: Dockerfile  init-db.sh  pg_hba.conf
main/: __init__.py  celery.py  huey_config.py  ksenyaChatBot.code-workspace  loader.py  settings.py  setup.py
migrations/: 0001_migration_202409101453.py  0002_migration_202409101645.py  0003_migration_202409241218.py  0004_migration_202409252350.py  0005_migration_202409281325.py  0005_migration_202410010941.py  0006_migration_202410011908.py  0007_migration_202410012013.py  0008_migration_202410021735.py  0009_migration_202410032058.py  0010_migration_202410081541.py  0011_migration_202502111630.py  0012_migration_202502161225.py  0013_migration_202502161502.py  0014_migration_202502161556.py  0015_migration_202502161621.py  0016_migration_202502161735.py  0017_migration_202502161737.py  0019_migration_202504091859.py  0020_migration_202504092011.py
(+42 files in other folders)
